[demo thu cai heroku]

--- a/NewProject/Register.html
+++ b/NewProject/Register.html
@@ -10,18 +10,18 @@
 <body>
     <div class="wrapper2">
         <div class="Form-register">
-            <form action="">
+            <form action="app.py" method="post">
                 <h1>Register</h1>
                 <div class="input-box2">
-                    <input type="text" placeholder="Username" required>
+                    <input type="text" placeholder="Username" name="user" required>
                     <i class='bx bx-user'></i>
                 </div>
                 <div class="input-box2">
-                    <input type="text" placeholder="Email" required>
+                    <input type="text" placeholder="Email" name="email" required>
                     <i class='bx bx-envelope' ></i>
                 </div>
                 <div class="input-box2">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" placeholder="Password" name="pass" required>
                     <i class='bx bx-lock-alt'></i>
                 </div>
                 <div class="input-box2">
