--- a/NewProject/Login.html
+++ b/NewProject/Login.html
@@ -13,11 +13,11 @@
             <form action="">
                 <h1>Login</h1>
                 <div class="input-box">
-                    <input type="text" placeholder="Username" required>
+                    <input type="text" placeholder="Username" name="user" required>
                     <i class='bx bx-user'></i>
                 </div>
                 <div class="input-box">
-                    <input type="password" placeholder="Password" required>
+                    <input type="password" placeholder="Password" name="pass" required>
                     <i class='bx bx-lock-alt'></i>
                 </div>
     
